; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/apitests/ntdll/extr_RtlBitmap.c_Test_RtlNumberOfSetBits.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/apitests/ntdll/extr_RtlBitmap.c_Test_RtlNumberOfSetBits.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Test_RtlNumberOfSetBits() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32*, align 8
  %3 = call i32* @AllocateGuarded(i32 8)
  store i32* %3, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = getelementptr inbounds i32, i32* %4, i64 0
  store i32 -16711921, i32* %5, align 4
  %6 = load i32*, i32** %2, align 8
  %7 = getelementptr inbounds i32, i32* %6, i64 1
  store i32 1060126512, i32* %7, align 4
  %8 = load i32*, i32** %2, align 8
  %9 = call i32 @RtlInitializeBitMap(i32* %1, i32* %8, i32 0)
  %10 = call i32 @RtlNumberOfSetBits(i32* %1)
  %11 = call i32 @ok_int(i32 %10, i32 0)
  %12 = load i32*, i32** %2, align 8
  %13 = call i32 @RtlInitializeBitMap(i32* %1, i32* %12, i32 4)
  %14 = call i32 @RtlNumberOfSetBits(i32* %1)
  %15 = call i32 @ok_int(i32 %14, i32 4)
  %16 = load i32*, i32** %2, align 8
  %17 = call i32 @RtlInitializeBitMap(i32* %1, i32* %16, i32 31)
  %18 = call i32 @RtlNumberOfSetBits(i32* %1)
  %19 = call i32 @ok_int(i32 %18, i32 19)
  %20 = load i32*, i32** %2, align 8
  %21 = call i32 @RtlInitializeBitMap(i32* %1, i32* %20, i32 56)
  %22 = call i32 @RtlNumberOfSetBits(i32* %1)
  %23 = call i32 @ok_int(i32 %22, i32 30)
  %24 = load i32*, i32** %2, align 8
  %25 = call i32 @RtlInitializeBitMap(i32* %1, i32* %24, i32 64)
  %26 = call i32 @RtlNumberOfSetBits(i32* %1)
  %27 = call i32 @ok_int(i32 %26, i32 36)
  %28 = load i32*, i32** %2, align 8
  %29 = call i32 @FreeGuarded(i32* %28)
  ret void
}

declare dso_local i32* @AllocateGuarded(i32) #1

declare dso_local i32 @RtlInitializeBitMap(i32*, i32*, i32) #1

declare dso_local i32 @ok_int(i32, i32) #1

declare dso_local i32 @RtlNumberOfSetBits(i32*) #1

declare dso_local i32 @FreeGuarded(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
